--- a/index.html
+++ b/index.html
@@ -18,7 +18,22 @@
             <h2>Women/Man</h2>
             <h2>Agency/Blog/Information</h2>
             <h2><i class="ri-search-line"></i></h2>
+</div>
+<div id="center">
+    <div id="content">
+        <video muted autoplay loop src="./Herovideo.mp4"></video>
+        <div id="overlay">
+            <div id="over1">
+                <h1>Photography <br> and Films</h1>
+            </div>
+            <div id="over2">
+                <h4>Explore</h4>
+                <img src="./arrow.png" alt="">
+            </div>
         </div>
+    </div>
+
+</div>
     </div>
     
 </body>
