--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
     <title>Bigshop Project</title>
 </head>
+
 <body>
     <div id="main">
         <div id="nav">
@@ -18,23 +17,42 @@
             <h2>Women/Man</h2>
             <h2>Agency/Blog/Information</h2>
             <h2><i class="ri-search-line"></i></h2>
-</div>
-<div id="center">
-    <div id="content">
-        <video muted autoplay loop src="./Herovideo.mp4"></video>
-        <div id="overlay">
-            <div id="over1">
-                <h1>Photography <br> and Films</h1>
+        </div>
+        <div id="center">
+            <div id="content">
+                <video muted autoplay loop src="./Herovideo.mp4"></video>
+                <div id="overlay">
+                    <div id="over1">
+                        <h1>Photography <br> and Films</h1>
+                    </div>
+                    <div id="over2">
+                        <h4>Explore</h4>
+                        <img src="./arrow.png" alt="">
+                    </div>
+                </div>
             </div>
-            <div id="over2">
-                <h4>Explore</h4>
-                <img src="./arrow.png" alt="">
-            </div>
+
+        </div>
+        <div id="scroll">
+          <div id="container">
+              <img src="./img1.jpg" alt="">
+            <img src="./img2.jpg" alt="" >
+            <img src="./img4.jpg" alt="">
+            <img src="./img5.jpg" alt="">
+            <img src="./img6.jpg" alt="">
+            <img src="./img7.jpg" alt="">
+            
+          </div>
+             <div id="container">
+              <img src="./img1.jpg" alt="">
+            <img src="./img2.jpg" alt="" >
+            <img src="./img4.jpg" alt="">
+            <img src="./img5.jpg" alt="">
+            <img src="./img6.jpg" alt="">
+            <img src="./img7.jpg" alt="">
+          </div>
         </div>
     </div>
-
-</div>
-    </div>
-    
 </body>
+
 </html>
