--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div id="center">
             <div id="content">
-                <video muted autoplay loop src="./Herovideo.mp4"></video>
+                <video muted autoplay loop src="./assets/Herovideo.mp4"></video>
                 <div id="overlay">
                     <div id="over1">
                         <h1>Photography <br> and Films</h1>
@@ -34,23 +34,23 @@
 
         </div>
         <div id="scroll">
-          <div id="container">
-              <img src="./img1.jpg" alt="">
-            <img src="./img2.jpg" alt="" >
-            <img src="./img4.jpg" alt="">
-            <img src="./img5.jpg" alt="">
-            <img src="./img6.jpg" alt="">
-            <img src="./img7.jpg" alt="">
-            
-          </div>
-             <div id="container">
-              <img src="./img1.jpg" alt="">
-            <img src="./img2.jpg" alt="" >
-            <img src="./img4.jpg" alt="">
-            <img src="./img5.jpg" alt="">
-            <img src="./img6.jpg" alt="">
-            <img src="./img7.jpg" alt="">
-          </div>
+            <div id="container">
+                <img src="./assets/img1.jpg" alt="">
+                <img src="./assets/img2.jpg" alt="">
+                <img src="./assets/img4.jpg" alt="">
+                <img src="./assets/img5.jpg" alt="">
+                <img src="./assets/img6.jpg" alt="">
+                <img src="./assets/img7.jpg" alt="">
+
+            </div>
+            <div id="container">
+                <img src="./assets/img1.jpg" alt="">
+                <img src="./assets/img2.jpg" alt="">
+                <img src="./assets/img4.jpg" alt="">
+                <img src="./assets/img5.jpg" alt="">
+                <img src="./assets/img6.jpg" alt="">
+                <img src="./assets/img7.jpg" alt="">
+            </div>
         </div>
     </div>
 </body>
