--- a/index.html
+++ b/index.html
@@ -52,6 +52,32 @@
                 <img src="./assets/img7.jpg" alt="">
             </div>
         </div>
+        <div id="alphabet">
+            <h5>All</h5>
+            <h6>A</h6>
+            <h6>B</h6>
+            <h6>C</h6>
+            <h6>D</h6>
+            <h6>E</h6>
+            <h6>F</h6>
+            <h6>G</h6>
+            <h6>H</h6>
+            <h6>I</h6>
+            <h6>J</h6>
+            <h6>K</h6>
+            <h6>M</h6>
+             <h6>A</h6>
+            <h6>B</h6>
+            <h6>C</h6>
+            <h6>D</h6>
+             <h6>A</h6>
+            <h6>B</h6>
+            <h6>C</h6>
+            <h6>D</h6>
+        </div>
+        <div id="page2">
+
+        </div>
     </div>
 </body>
 
