--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
             <h6>D</h6>
         </div>
         <div id="page2">
-
+         <div id="page2-part1"></div>
+         <div id="page2-part2">
+            <img src="https://images.unsplash.com/photo-1614426007375-904fd4934df9?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8Z2lybCUyMG1vZGVsJTIwcG9ydHJhaXRzfGVufDB8fDB8fHww" alt="">
+         </div>
         </div>
     </div>
 </body>
