--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
          <div id="page2-part1"></div>
          <div id="page2-part2">
             <img src="https://images.unsplash.com/photo-1614426007375-904fd4934df9?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8Z2lybCUyMG1vZGVsJTIwcG9ydHJhaXRzfGVufDB8fDB8fHww" alt="">
+           <div id="page2-text">
+             <h1>Lorem ipsum dolor sit amet consectetur elit.nostrum.</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda omnis, alias non aliquam quaerat adipisci quas repudiandae quisquam modi Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, veniam! tenetur.
+            </p>
+           </div>
          </div>
         </div>
     </div>
