Updates section structure

--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
            </div>
          </div>
         </div>
+        <div id="page3">
+            <h1>Updates</h1>
+            <div class="elem"></div>
+            <div class="elem"></div>
+            <div class="elem"></div>
+            <div class="elem"></div>
+        </div>
     </div>
 </body>
 
