--- a/index.html
+++ b/index.html
@@ -88,10 +88,38 @@
         </div>
         <div id="page3">
             <h1>Updates</h1>
-            <div class="elem"></div>
-            <div class="elem"></div>
-            <div class="elem"></div>
-            <div class="elem"></div>
+            <div class="elem">
+                <img src="https://images.unsplash.com/photo-1629747490241-624f07d70e1e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBvcnRyYWl0c3xlbnwwfHwwfHx8MA%3D%3D" alt="">
+                <h4>Mens Fashion</h4>
+                <div class="elem-part2">
+                    <h1>Khadim & Tom ford</h1>
+                    <h5>25th March 2000</h5>
+                </div>
+            </div>
+            <div class="elem">
+                <img src="https://images.unsplash.com/photo-1629747490241-624f07d70e1e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBvcnRyYWl0c3xlbnwwfHwwfHx8MA%3D%3D" alt="">
+                  <h4>Mens Fashion</h4>
+                <div class="elem-part2">
+                    <h1>Khadim & Tom ford</h1>
+                    <h5>25th March 2000</h5>
+                </div>
+            </div>
+            <div class="elem">
+                <img src="https://images.unsplash.com/photo-1629747490241-624f07d70e1e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBvcnRyYWl0c3xlbnwwfHwwfHx8MA%3D%3D" alt="">
+                  <h4>Mens Fashion</h4>
+                <div class="elem-part2">
+                    <h1>Khadim & Tom ford</h1>
+                    <h5>25th March 2000</h5>
+                </div>
+            </div>
+            <div class="elem">
+                <img src="https://images.unsplash.com/photo-1629747490241-624f07d70e1e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBvcnRyYWl0c3xlbnwwfHwwfHx8MA%3D%3D" alt="">
+                  <h4>Mens Fashion</h4>
+                <div class="elem-part2">
+                    <h1>Khadim & Tom ford</h1>
+                    <h5>25th March 2000</h5>
+                </div>
+            </div>
         </div>
     </div>
 </body>
